--- a/Main.tex
+++ b/Main.tex
@@ -251,7 +251,7 @@ June, 2014
 
 \begin{center}
 A thesis submitted to Swansea University\\
-in candidature for the degree of Doctor of Philsophy
+in candidature for the degree of Doctor of Philosophy.
 \end{center}
 
 \begin{center}
@@ -290,7 +290,7 @@ Signed:
 
 \section*{Statement 1}
 This thesis is being submitted in partial fulfilment of the
-requirements for the degree of a MRes in Logic and Computation.
+requirements for the degree of Doctor of Philosophy.
 
 \vspace{0.5cm}
 \begin{tabular}{l}
