--- a/Maude.tex
+++ b/Maude.tex
@@ -751,12 +751,12 @@ endfm
 One extension of Maude that has been used to model and verify hybrid systems is Real Time Maude. This contains specific support enabling the modelling and verification of real-timed and discrete timed systems. There is an example of a distributed sensor network that has been modelled and verified using this tool. It is stated by its developers that Real Time Maude is not first and foremost a verification tool. This is due to some inherent limitations in LTL-model checking that hinder the verification of infinite state systems. We have, as in the sensor network example, only model checked a portion of the state space of our example using this tool. This is however enough to have confidence in the correctness of the system with respect to a given safety condition.
 
 
-
-
 \subsection{Real Time Maude Specifications}
 A Real Timed Maude specification consists of \emph{timed modules} that start with \texttt{tmod} and end with \texttt{endtm}. Formally a Real Time Maude specification is a real-time rewrite theory which can be thought of as a rewrite theory with an interpretation for the abstract time domain together with rewrite rules for terms of type \texttt{System} that have a time duration \cite{PO02}. These rewrite rules can be separated into two categories, the \emph{tick} rules have a non-zero time elapse and the \emph{instantaneous} rules have a time elapse of zero.
 
-The interpretation of the abstract time domain is mapped to a concrete specification of time during the specification process. Real time Maude comes with two of these specifications as standard the most simple  is discrete time based on the natural numbers and the more complicated of the two is dense time based on the rational numbers. We shall use discrete time during the specification as it allows for the best results during the verification process. \textbf{Note: Do we need to describes equational theorys?}
+The interpretation of the abstract time domain is mapped to a concrete specification of time during the specification process. Real time Maude comes with two of these specifications as standard the most simple  is discrete time based on the natural numbers and the more complicated of the two is dense time based on the rational numbers. We shall use discrete time during the specification as it allows for the best results during the verification process. 
+
+\medskip
 
 \begin{mydef}[Equational Theory Morphism]
  We define an \emph{equational theory morphism} $H: (\Sigma,E) \to (\Sigma', E')$ to consist of the following
@@ -768,7 +768,7 @@ The interpretation of the abstract time domain is mapped to a concrete specifica
 
 \item  $\var{H(f_{s_1 \ldots s_n, s})} \subseteq {x_1:H(s_1), \ldots, x_n:H(s_n)}$
 
-\item if the operator $f: s_1 \ldots s_n \to s$ can be subsort overloaded $f: s'_1 \ldots s'_n \to s'$ such that $s_i \leq s'_i, s\leq s'$ then it is possible to substute each variable $x_i:H(s'_i)$ by the corresponding variable $x_i:H(s_i)$ in the term $H(f_{s'_1 \ldots s'_n, s})$ and obtain $H(f_{s_1 \ldots s_n, s})$.
+\item if the operator $f: s_1 \ldots s_n \to s$ can be subsort overloaded $f: s'_1 \ldots s'_n \to s'$ such that $s_i \leq s'_i, s\leq s'$ then it is possible to substitute each variable $x_i:H(s'_i)$ by the corresponding variable $x_i:H(s_i)$ in the term $H(f_{s'_1 \ldots s'_n, s})$ and obtain $H(f_{s_1 \ldots s_n, s})$.
 
 \item For every axiom: $$(\forall y_1:s_1, \ldots y_k : s_k) u = v \ \textbf{if} \ C$$ in E the homomorphic extension of $H^*$ to terms and equations in the condition $C$ causes the following to hold:
    $$E' \models (\forall y_1 : H(s_1), \ldots, y_k : H(s_k)) H^*(u) = H^*(v) \ \textbf{if} \ H^*(C)$$
@@ -1014,7 +1014,7 @@ fmod MAP{X :: TRIV, Y ::  TRIV} is
  var M : Map{X,Y} .
 \end{lstlisting}
 
-When we use a parameterised data type in a specification it is possible to assign a new sort to the particular parameterised instance of the map or set that we are using.
+When we use a parametrised data type in a specification it is possible to assign a new sort to the particular parametrised instance of the map or set that we are using.
 \begin{center}
 \texttt{protecting MAP\{Oid,Nat\}  * (sort Map\{Oid,Nat\} to MapON,
                                sort Entry\{Oid,Nat\} to EntryON) .}
@@ -1135,14 +1135,14 @@ Result ClockedSystem :
 
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.4]{t1graph.png}
+\includegraphics[scale=0.5]{t1graph.png}
 \end{center}
 \caption{A graph comparing the distance and speed of train1}
 \end{figure}
 
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.4]{t2graph.png}
+\includegraphics[scale=0.64]{t2graph.png}
 \end{center}
 \caption{A graph comparing the distance and speed of train2}
 \end{figure}
@@ -1150,7 +1150,7 @@ Result ClockedSystem :
 \begin{figure}
 \label{t1t2graph}
 \begin{center}
-\includegraphics[scale=0.4]{t1t2graph.png}
+\includegraphics[scale=0.64]{t1t2graph.png}
 \end{center}
 \caption{A graph comparing the distances of train1 and train2}
 \end{figure}
